[refactor] 중복된 로직 -> convertToDto()로 통합